--- a/nest-mfa-google/tsconfig.json
+++ b/nest-mfa-google/tsconfig.json
@@ -12,8 +12,10 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
+    // "strictNullChecks": false,
+    "strictNullChecks": true,
+    // "noImplicitAny": false,
+    "noImplicitAny": true,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false, 
