nest-mfa-google: mfa 관련 명칭 통일

--- a/nest-mfa-google/.env
+++ b/nest-mfa-google/.env
@@ -12,4 +12,4 @@ DATABASE_PASSWORD=3999
 DATABASE_NAME=prac3
 DATABASE_SYNC=true
 
-TWO_FACTOR_AUTHENTICATION_APP_NAME=otpauth://
+MFA_APP_NAME=otpauth://
