--- a/nest-graphql2/.env.dev
+++ b/nest-graphql2/.env.dev
@@ -3,3 +3,6 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD='3999'
 DB_NAME='nuber-eats'
+
+SECRET_KEY='JWT_SECRET_KEY'
+PRIVATE_KEY='JWT_SECRET_KEY'
