nest-graphql2: Mail Setup

--- a/nest-graphql2/.env.dev
+++ b/nest-graphql2/.env.dev
@@ -6,3 +6,7 @@ DB_NAME='nuber-eats'
 
 SECRET_KEY='JWT_SECRET_KEY'
 PRIVATE_KEY='JWT_SECRET_KEY'
+
+MAILGUN_API_KEY='MAILGUN_API_KEY'
+MAILGUN_DOMAIN_NAME='MAILGUN_DOMAIN_NAME.mailgun.org'
+MAILGUN_FROM_EMAIL='cchoseonghun@gmail.com'
