--- a/nest-graphql2/package.json
+++ b/nest-graphql2/package.json
@@ -34,6 +34,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "form-data": "^4.0.0",
+    "got": "^11.7.0",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.0",
     "joi": "^17.11.0",
