--- a/nest-pg/package.json
+++ b/nest-pg/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^10.3.4",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.4",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
