--- a/nest-pg/tsconfig.json
+++ b/nest-pg/tsconfig.json
@@ -13,6 +13,8 @@
     "rootDir": "./",
     "baseUrl": "./",
     "skipLibCheck": true,
-    "incremental": true
+    "incremental": true,
+    "esModuleInterop": true,
+    "noEmitOnError": true
   }
 }
